testdata/baselines/reference/submodule/conformance/derivedClassWithPrivateStaticShadowingProtectedStatic.errors.txt
derivedClassWithPrivateStaticShadowingProtectedStatic.ts(12,7): error TS2417: Class static side '{ new (): Derived; x: string; fn: () => string; a: number; prototype: Derived; }' incorrectly extends base class static side '{ x: string; fn: () => string; a: number; prototype: Base; }'.
  Property 'x' is private in type '{ new (): Derived; x: string; fn: () => string; a: number; prototype: Derived; }' but not in type '{ x: string; fn: () => string; a: number; prototype: Base; }'.


==== derivedClassWithPrivateStaticShadowingProtectedStatic.ts (1 errors) ====
    class Base {
        protected static x: string;
        protected static fn(): string {
            return '';
        }
    
        protected static get a() { return 1; }
        protected static set a(v) { }
    }
    
    // should be error
    class Derived extends Base {
          ~~~~~~~
!!! error TS2417: Class static side '{ new (): Derived; x: string; fn: () => string; a: number; prototype: Derived; }' incorrectly extends base class static side '{ x: string; fn: () => string; a: number; prototype: Base; }'.
!!! error TS2417:   Property 'x' is private in type '{ new (): Derived; x: string; fn: () => string; a: number; prototype: Derived; }' but not in type '{ x: string; fn: () => string; a: number; prototype: Base; }'.
        private static x: string; 
        private static fn(): string {
            return '';
        }
    
        private static get a() { return 1; }
        private static set a(v) { }
    }